Added a home button on the query page

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -5,9 +5,7 @@
 		<title>Gondolin</title>
 		<link rel="stylesheet" href="/index.css" />
 	</head>
-	<body
-		class="bg-zinc-100 text-zinc-800 dark:bg-zinc-900 dark:text-zinc-100"
-	>
+	<body class="bg-zinc-100 text-zinc-800 dark:bg-zinc-900 dark:text-zinc-100">
 		<form
 			class="flex min-h-screen flex-col items-center justify-center py-6 sm:py-12"
 			action="/query"
