--- a/src/web/card.html
+++ b/src/web/card.html
@@ -1,39 +1,63 @@
 <div
-	class="p-15 py-15 flex flex-col rounded-xl shadow-lg ring-1 ring-zinc-900/10 dark:bg-zinc-800 dark:ring-zinc-300/25"
+	class="flex flex-col rounded-lg shadow-lg ring-1 ring-zinc-900/10 transition-all ease-in-out dark:bg-zinc-800 dark:ring-zinc-300/25"
 >
 	<p class="p-4 py-8 text-center text-5xl">{name}</p>
-	<div class="flex w-full flex-col gap-y-4 pb-8">
-		<div class="align-center flex w-full items-center px-3.5">
+	<div
+		class="flex flex-col items-center justify-center gap-y-4 py-4 transition-all ease-in-out"
+	>
+		<div class="flex w-full px-3.5 transition-all ease-in-out">
 			<div
-				class="max-h-fit rounded-l-md border-y-2 border-l-2 border-zinc-900/20 bg-zinc-200 shadow-sm dark:border-zinc-700/75 dark:border-r-zinc-700 dark:bg-zinc-900/50 dark:shadow-zinc-700/30"
+				class="flex grow-0 items-center justify-center rounded-l-md border-2 border-r-0 border-zinc-900/20 bg-zinc-200 transition-all ease-in-out dark:border-zinc-700/75 dark:bg-zinc-900/50"
 			>
-				<p class="my-2 px-2">Username</p>
+				<p class="px-2 py-0.5">Username</p>
 			</div>
 			<div
-				class="max-h-fit w-full rounded-r-md border-y-2 border-l-[1.5px] border-r-2 border-zinc-900/20 shadow-sm outline-none focus-within:border-2 focus-within:border-zinc-900/30 dark:border-zinc-700/75 dark:shadow-zinc-700/50 dark:focus-within:border-zinc-600"
+				class="grow overflow-x-auto rounded-r-md border-2 border-zinc-900/20 transition-all ease-in-out hover:border-zinc-900/30 dark:border-zinc-700/75 dark:hover:border-zinc-600"
 			>
-				<input
-					readonly="readonly"
-					class="my-2 w-full select-all appearance-none bg-zinc-100 px-2 outline-none dark:bg-zinc-800"
-					value="{username}"
-				/>
+				<p class="p-2.5">{username}</p>
 			</div>
 		</div>
-		<div class="align-center flex w-full items-center px-3.5">
+		<div class="max-w-112 flex w-full px-3.5 transition-all ease-in-out">
 			<div
-				class="max-h-fit rounded-l-md border-y-2 border-l-2 border-zinc-900/20 bg-zinc-200 shadow-sm dark:border-zinc-700/75 dark:border-r-zinc-700 dark:bg-zinc-900/50 dark:shadow-zinc-700/30"
+				class="flex grow-0 items-center justify-center rounded-l-md border-2 border-r-0 border-zinc-900/20 bg-zinc-200 transition-all ease-in-out dark:border-zinc-700/75 dark:bg-zinc-900/50"
 			>
-				<p class="my-2 px-2">Password</p>
+				<p class="px-2 py-0.5">Password</p>
 			</div>
 			<div
-				class="max-h-fit w-full rounded-r-md border-y-2 border-l-[1.5px] border-r-2 border-zinc-900/20 shadow-sm outline-none focus-within:border-2 focus-within:border-zinc-900/30 dark:border-zinc-700/75 dark:shadow-zinc-700/50 dark:focus-within:border-zinc-600"
+				class="grow overflow-x-auto rounded-r-md border-2 border-zinc-900/20 transition-all ease-in-out hover:border-zinc-900/30 dark:border-zinc-700/75 dark:hover:border-zinc-600"
 			>
-				<input
-					readonly="readonly"
-					class="my-2 w-full select-all appearance-none bg-zinc-100 px-2 outline-none dark:bg-zinc-800"
-					value="{password}"
-				/>
+				<p class="p-2.5">{password}</p>
 			</div>
 		</div>
+		<button
+			class="group flex h-10 w-10 items-center justify-center rounded-md border border-red-500 text-red-600 shadow-xl hover:border-red-700 hover:bg-zinc-200 dark:border-red-500 hover:dark:border-red-400 dark:hover:bg-zinc-900/75"
+		>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				fill="none"
+				viewBox="0 0 24 24"
+				stroke-width="1.5"
+				stroke="currentColor"
+				class="absolute h-6 w-6 group-hover:invisible"
+			>
+				<path
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+				></path>
+			</svg>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				viewBox="0 0 24 24"
+				fill="currentColor"
+				class="invisible absolute h-6 w-6 group-hover:visible"
+			>
+				<path
+					fill-rule="evenodd"
+					d="M16.5 4.478v.227a48.816 48.816 0 013.878.512.75.75 0 11-.256 1.478l-.209-.035-1.005 13.07a3 3 0 01-2.991 2.77H8.084a3 3 0 01-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 01-.256-1.478A48.567 48.567 0 017.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 013.369 0c1.603.051 2.815 1.387 2.815 2.951zm-6.136-1.452a51.196 51.196 0 013.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 00-6 0v-.113c0-.794.609-1.428 1.364-1.452zm-.355 5.945a.75.75 0 10-1.5.058l.347 9a.75.75 0 101.499-.058l-.346-9zm5.48.058a.75.75 0 10-1.498-.058l-.347 9a.75.75 0 001.5.058l.345-9z"
+					clip-rule="evenodd"
+				></path>
+			</svg>
+		</button>
 	</div>
 </div>
