--- a/src/web/card.html
+++ b/src/web/card.html
@@ -1,9 +1,11 @@
 <div
 	class="flex flex-col rounded-lg shadow-lg ring-1 ring-zinc-900/10 transition-all ease-in-out dark:bg-zinc-800 dark:ring-zinc-300/25"
+	id='{id}'
 >
 	<p class="p-4 py-8 text-center text-5xl">{name}</p>
 	<div
 		class="flex flex-col items-center justify-center gap-y-4 py-4 transition-all ease-in-out"
+
 	>
 		<div class="flex w-full px-3.5 transition-all ease-in-out">
 			<div
@@ -31,6 +33,7 @@
 		</div>
 		<button
 			class="group flex h-10 w-10 items-center justify-center rounded-md border border-red-500 text-red-600 shadow-xl hover:border-red-700 hover:bg-zinc-200 dark:border-red-500 hover:dark:border-red-400 dark:hover:bg-zinc-900/75"
+			onclick='remove_login("{id}")'
 		>
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
