--- a/src/web/index.html
+++ b/src/web/index.html
@@ -14,7 +14,7 @@
 			<h1 class="my-12 text-center text-8xl">Gondolin</h1>
 
 			<div
-				class="form-input box-sizing mx-24 my-12 flex h-14 w-3/4 items-center justify-center rounded-xl bg-zinc-100 p-5 shadow-lg outline-zinc-700 ring-1 ring-zinc-900/10 transition-all ease-in-out focus-within:ring-2 focus-within:ring-zinc-800 focus-within:ring-offset-2 focus-within:ring-offset-zinc-100 hover:ring-zinc-900/25 hover:focus-within:ring-zinc-800 dark:bg-zinc-800 dark:shadow-zinc-800/75 dark:ring-zinc-100/20 dark:focus-within:ring-zinc-100/60 dark:focus-within:ring-offset-zinc-900 dark:hover:ring-zinc-100/30 dark:hover:focus-within:ring-zinc-100/60"
+				class="box-sizing mx-24 my-12 flex h-14 w-3/4 items-center justify-center rounded-xl bg-zinc-100 p-5 shadow-lg outline-zinc-700 ring-1 ring-zinc-900/10 transition-all ease-in-out focus-within:ring-2 focus-within:ring-zinc-800 focus-within:ring-offset-2 focus-within:ring-offset-zinc-100 hover:ring-zinc-900/25 hover:focus-within:ring-zinc-800 dark:bg-zinc-800 dark:shadow-zinc-800/75 dark:ring-zinc-100/20 dark:focus-within:ring-zinc-100/60 dark:focus-within:ring-offset-zinc-900 dark:hover:ring-zinc-100/30 dark:hover:focus-within:ring-zinc-100/60"
 			>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
