--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Gondolin</title>
+		<title>Locket</title>
 		<link rel="stylesheet" href="/index.css" />
 	</head>
 	<body class="bg-zinc-100 text-zinc-800 dark:bg-zinc-900 dark:text-zinc-100">
@@ -11,7 +11,7 @@
 			action="/query"
 			method="GET"
 		>
-			<h1 class="my-12 text-center text-8xl">Gondolin</h1>
+			<h1 class="my-12 text-center text-8xl">Locket</h1>
 
 			<div
 				class="box-sizing mx-24 my-12 flex h-14 w-3/4 items-center justify-center rounded-xl bg-zinc-100 p-5 shadow-lg outline-zinc-700 ring-1 ring-zinc-900/10 transition-all ease-in-out focus-within:ring-2 focus-within:ring-zinc-800 focus-within:ring-offset-2 focus-within:ring-offset-zinc-100 hover:ring-zinc-900/25 hover:focus-within:ring-zinc-800 dark:bg-zinc-800 dark:shadow-zinc-800/75 dark:ring-zinc-100/20 dark:focus-within:ring-zinc-100/60 dark:focus-within:ring-offset-zinc-900 dark:hover:ring-zinc-100/30 dark:hover:focus-within:ring-zinc-100/60"
