--- a/src/web/query.html
+++ b/src/web/query.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Gondolin</title>
+		<title>Locket</title>
 		<link rel="stylesheet" href="/index.css" />
 		<script src="/query.js"></script>
 	</head>
